fix: Operate does not correctly convert snapshot endTime
(cherry picked from commit 1ce4d123e9290b1913c2ce312081390443a54d3e)